fixing role and login